--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgrxForBeginers</title>
+  <title>Ngrx-my-Work-from-0</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/notebook-with-decorative-cover-svgrepo-com.svg">
 </head>
 <body>
   <app-root></app-root>
